raffia/tests/error/less/value/parens-1.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `{`
  ┌─ parens-1.less:1:4
  │
1 │ .a {
  │    ^


